Adjust button size

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <span><a href="">Githubs</a></span>
         </span>
     </nav>
-    <div class="flex-grow flex flex-col items-center justify-center gap-4">
+    <div class="flex-grow flex flex-col items-center justify-center gap-6">
         <h1 class="text-4xl font-sans font-bold leading-tight tracking-tight text-center items-center">Upgraded Rotary Phone</h1>
-        <button type="button" class="bg-black text-white p-2 rounded-md">Project</button>
+        <button type="button" class="bg-black text-white w-1/6 p-2 rounded-md">Project</button>
     </div>
 
 </body>
