--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upgraded Rotary Phone</title>
     <link href="/output.css" rel="stylesheet">
+    <script src="/main.js" defer></script>
 </head>
 <body class="h-screen flex flex-col">
     <nav class="bg-black p-4 shadow-lg text-white flex justify-between">
@@ -16,8 +17,26 @@
     </nav>
     <div class="flex-grow flex flex-col items-center justify-center gap-6">
         <h1 class="text-4xl font-sans font-bold leading-tight tracking-tight text-center items-center">Upgraded Rotary Phone</h1>
-        <button type="button" class="bg-black text-white w-1/6 p-2 rounded-md">Project</button>
+        <button id="projectButton" type="button" class="bg-black text-white w-1/6 p-2 rounded-md">Project</button>
     </div>
-
+    <div id="projectsContainer" class="grid grid-cols-2 gap-4 p-4">
+        <div id="newProjects" class="flex flex-col gap-4" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <h2 class="text-xl font-bold">New Projects</h2>
+        </div>
+        <div class="border-l-2 border-gray-300"></div>
+        <div id="completedProjects" class="flex flex-col gap-4" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <h2 class="text-xl font-bold">Completed Projects</h2>
+        </div>
+    </div>
+    <div id="myModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center invisible">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-1/3 relative">
+            <span class="close absolute top-2 right-2 cursor-pointer">&times;</span>
+            <input type="file" id="projectImage" class="mb-4">
+            <img id="imagePreview" src="path/to/image.jpg" alt="Project Image" class="w-full h-48 object-cover rounded-md mb-4">
+            <input type="text" id="projectName" class="text-2xl font-bold mb-2 w-full" placeholder="Project Name">
+            <textarea id="projectDescription" class="text-gray-700 w-full" placeholder="This is a small description of the project."></textarea>
+            <button id="addProjectButton" type="button" class="bg-black text-white w-full p-2 rounded-md mt-4">Add Project</button>
+        </div>
+    </div>
 </body>
 </html>
