Add Dynamic Footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="text-4xl font-sans font-bold leading-tight tracking-tight text-center items-center">Upgraded Rotary Phone</h1>
         <button id="projectButton" type="button" class="bg-black text-white w-1/6 p-2 rounded-md">Project</button>
     </div>
-    <div class="flex flex-col">
+    <div class="flex flex-col p-4">
         <span class="self-center font-bold text-2xl">Projects</span>
         
         <div id="projectsContainer" class="grid grid-cols-2 gap-4 p-4">
@@ -45,5 +45,6 @@
             <button id="addProjectButton" type="button" class="bg-black text-white w-full p-2 rounded-md mt-4">Add Project</button>
         </div>
     </div>
+    <footer  id="footer" class="bg-black text-white font-sans text-center font-bold p-4">&copy; Tev and Brandon </footer>
 </body>
 </html>
