Add Clickable Github Profiles

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <nav class="bg-black p-4 shadow-lg text-white flex justify-between">
         <span class="font-serif font-bold">NCTR</span>
         <span class="flex gap-6">
-            <span><a href="">Projects</a></span>
-            <span><a href="">Githubs</a></span>
+            <span><a href="#projects">Projects</a></span>
+            <span><a href="github.html">Githubs</a></span>
         </span>
     </nav>
     <div class="h-screen flex-grow flex flex-col items-center justify-center gap-6">
         <h1 class="text-4xl font-sans font-bold leading-tight tracking-tight text-center items-center">Upgraded Rotary Phone</h1>
         <button id="projectButton" type="button" class="bg-black text-white w-1/6 p-2 rounded-md">Project</button>
     </div>
-    <div class="flex flex-col p-4">
+    <div id="projects" class="flex flex-col p-4">
         <span class="self-center font-bold text-2xl">Projects</span>
         
         <div id="projectsContainer" class="grid grid-cols-2 gap-4 p-4">
