--- a/github.html
+++ b/github.html
@@ -7,8 +7,17 @@
     <link href="/output.css" rel="stylesheet">
     <script src="/src/assets/js/github.js"></script>
 </head>
-<body class="bg-gray-100 p-4">
-    <h1 class="text-2xl font-bold font-sans text-center mb-4">GitHub Profiles</h1>
-    <div id="profilesContainer" class="grid grid-cols-2 gap-4 p-4"></div>
-</body>
+<body class="bg-gray-100">
+    <nav class="bg-black p-4 shadow-lg text-white flex justify-between">
+        <span class="font-serif font-bold"><a href="index.html">NCTR</a></span>
+        <span class="flex gap-6">
+            <span><a href="#projects">Projects</a></span>
+            <span><a href="github.html">Githubs</a></span>
+        </span>
+    </nav>
+    <div class="p-4">
+        <h1 class="text-2xl font-bold font-sans text-center mb-4">GitHub Profiles</h1>
+        <div id="profilesContainer" class="grid grid-cols-2 gap-4 p-4"></div>
+    </div>
+    </body>
 </html>
