--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="flex flex-col">
     <nav class="bg-black p-6 shadow-lg text-white flex justify-between">
-        <span class="font-serif font-bold">NCTR</span>
+        <span class="font-serif font-bold"><a href="index.html">NCTR</a></span>
         <span class="flex gap-6">
             <span><a href="#projects">Projects</a></span>
             <span><a href="github.html">Githubs</a></span>
@@ -22,22 +22,21 @@
             Phone</h1>
         <button id="projectButton" type="button" class="bg-black text-white w-1/6 p-2 rounded-md">Project</button>
     </div>
-    <div id="projects" class="flex flex-col p-4  min-h-[100vh]">
+    <div id="projects" class="flex flex-col p-4 min-h-[100vh]">
         <span class="self-center font-bold text-2xl">Projects</span>
-
         <div id="projectsContainer" class="grid grid-cols-2 gap-4 p-4">
-
             <div id="newProjects" class="flex flex-col gap-4" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h2 class="text-xl font-bold self-center">New Projects</h2>
-
             </div>
-
             <div id="completedProjects" class="flex flex-col gap-4" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <h2 class="text-xl font-bold self-center">Completed Projects</h2>
             </div>
         </div>
-    </div>
 
+        <button id="clearCompletedButton" class="mt-4 bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition-colors mx-auto block">
+            Clear Completed Projects
+        </button>
+    </div>
     <div id="myModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center invisible">
         <div class="bg-white p-6 rounded-lg shadow-lg w-1/3 relative">
             <h2></h2>
@@ -46,6 +45,7 @@
             <img id="imagePreview" src="path/to/image.jpg" alt="Project Image"
                 class="w-full h-48 object-cover rounded-md mb-4">
             <input type="text" id="projectName" class="text-2xl font-bold mb-2 w-full" placeholder="Project Name">
+            <input type="text" id="projectLead" class="text-xl font-semibold mb-2 w-full" placeholder="Project Lead">
             <textarea id="projectDescription" class="text-gray-700 w-full"
                 placeholder="This is a small description of the project."></textarea>
             <button id="addProjectButton" type="button" class="bg-black text-white w-full p-2 rounded-md mt-4">Add
