--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <button id="clearCompletedButton" class="mt-4 bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition-colors mx-auto block">
+        <button id="clearCompletedButton" class="mt-4 animate-pulse bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition-colors mx-auto block">
             Clear Completed Projects
         </button>
     </div>
