--- a/github.html
+++ b/github.html
@@ -11,7 +11,7 @@
     <nav class="bg-black p-6 shadow-lg text-white flex justify-between">
         <span class="font-serif font-bold"><a href="index.html">NCTR</a></span>
         <span class="flex gap-6">
-            <span><a href="#projects">Projects</a></span>
+            <span><a href="/#projects">Projects</a></span>
             <span><a href="github.html">Githubs</a></span>
         </span>
     </nav>
