added project share method

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upgraded Rotary Phone</title>
     <link href="/output.css" rel="stylesheet">
-    <script src="/main.js" defer></script>
+    <script type="module" src="./main.js" defer></script>
 </head>
 
 <body class="flex flex-col">
@@ -14,7 +14,7 @@
         <span class="font-serif font-bold"><a href="index.html">NCTR</a></span>
         <span class="flex gap-6">
             <span><a href="#projects">Projects</a></span>
-            <span><a href="github.html">Githubs</a></span>
+            <span><a href="/src/pages/github.html">Githubs</a></span>
         </span>
     </nav>
     <div class="h-screen flex-grow flex flex-col items-center justify-center gap-6">
