--- a/src/pages/github.html
+++ b/src/pages/github.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100">
     <nav class="bg-black p-6 shadow-lg text-white flex justify-between">
-        <span class="font-serif font-bold"><a href="index.html">NCTR</a></span>
+        <span class="font-serif font-bold"><a href="/index.html">NCTR</a></span>
         <span class="flex gap-6">
             <span><a href="/#projects">Projects</a></span>
             <span><a href="github.html">Githubs</a></span>
