--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <span class="flex gap-6">
             <span><a href="#projects">Projects</a></span>
             <span><a href="/src/pages/github.html">Githubs</a></span>
+            <span><a href="/src/pages/test.html">Tests</a></span>
         </span>
     </nav>
     <div class="h-screen flex-grow flex flex-col items-center justify-center gap-6">
