minimum working product

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                         />
                     </p>
                 </div>
-
+                <div id="loader-wrapper" class="flex justify-center pt-8 pb-4">
+                    <div id="loader" class="loader hidden"></div>
+                </div>
                 <input
                     id="addProjectButton"
                     class="bg-black text-white w-full p-2 rounded-md my-2 cursor-pointer"
@@ -135,9 +137,7 @@
                     value="Add Project"
                 />
             </form>
-            <div class="loader-wrapper flex justify-center pt-8 pb-4">
-                <div class="loader"></div>
-            </div>
+
         </div>
         <footer
             id="footer"
