--- a/src/pages/test.html
+++ b/src/pages/test.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="/src/assets/styles/test.css" rel="stylesheet" />
         <title>GitHub Repository Preview</title>
+        <script src="/src/assets/js/tests.js"></script>
     </head>
     <body>
         <div class="card">
@@ -111,6 +112,17 @@
                 <div class="bar-yellow"></div>
             </div>
         </div>
-
+        <div
+            class="h-2 w-full bg-black border border-black"
+            id="colorBar"
+            style="
+                height: 0.5rem;
+                width: 100%;
+                border: 1px solid black;
+                display: flex;
+            "
+        >
+            <span style="width: 22%; background-color: violet"></span>
+        </div>
     </body>
 </html>
